--- a/style.css
+++ b/style.css
@@ -151,14 +151,15 @@ p {
     position: absolute;
     right: 0px;
     height: 90vh;
-    top: 8.55vh;
+    top: 8.20vh;
     margin-right: 0;
-    justify-content: space-around;
+    padding: 0;
+    justify-content: space-evenly;
     background-color: #d4d7de;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
+    width: 40%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
